--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ function addSuggestion(suggestion){
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section intro-section bg-light" id="About">
+<section class="projects-section section-fixtotop bg-light" id="About">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
@@ -356,8 +356,9 @@ function addSuggestion(suggestion){
                     <div class="d-flex h-100">
                         <div class="project-text w-100 my-auto text-center text-lg-right">
                             <h4 class="text-white">Challenge</h4>
-                            <p class="mb-0 text-white-50">
-                            In times of COVID-19, it is very difficult for healthcare professional to communicate with deaf patients. Sign language interpreters are often not allowed to enter the hospital and mouth caps make lipreading impossible.
+                            <p class="mb-2 text-white-50">
+                            In times of COVID-19, it is very difficult for healthcare professionals to communicate with deaf patients. 
+                            Sign language interpreters are often not allowed to enter the hospital and mouth caps make lipreading impossible.
                             </p>
                             <hr class="d-none d-lg-block mb-0 mr-0" />
                         </div>
@@ -391,7 +392,7 @@ function addSuggestion(suggestion){
 <!-- Translate -->
 
 <section class="projects-section bg-light" id="Translate">
-    <div class="container">
+    <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
@@ -490,7 +491,7 @@ function addSuggestion(suggestion){
 <!--================================================================-->
 
 <!-- Team section -->
-<section class="projects-section intro-section bg-white" id="Team">
+<section class="projects-section bg-white" id="Team">
 
     <div class="container" height="100%">
 
@@ -522,7 +523,7 @@ function addSuggestion(suggestion){
 
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="images/team2.jpg" alt="" /></div>
+            <div class="col-xl-6 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="images/team.jpg" alt="" /></div>
         </div>
 
 
@@ -534,10 +535,10 @@ function addSuggestion(suggestion){
 <!-- Funding page -->
 <section class="projects-section bg-light" id="Funding">
 
-    <div class="container" height="100%">
+    <div class="container" >
 
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-            <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="images/bg-masthead.jpg" alt="" /></div>
+            <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="images/bg-signup.jpg" alt="" /></div>
             <div class="col-xl-4 col-lg-5">
                 <div class="featured-text text-center text-lg-left">
                     <h4>Funding</h4>
@@ -557,32 +558,54 @@ function addSuggestion(suggestion){
 <section class="projects-section intro-section bg-white" id="Partners">
 
       <div class="container" height="100%">
+          <!-- East Anglia Row-->
+          <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+              <div class="col-lg-6"><img class="img-fluid h-100" src="images/east-anglia.jpg" alt="" /></div>
+              <div class="col-lg-6">
+                  <div class="bg-light text-center h-100 project">
+                      <div class="d-flex h-100">
+                          <div class="project-text w-100 my-auto text-center text-lg-right">
+                              <h4 class="text-black">University of East Anglia</h4>
+                              <p class="text-black-50 mb-3">
+                                  Our translation tool makes use of the
+                                  <a href="http://vh.cmp.uea.ac.uk/index.php/JASigning" target="_blank">JASinging avatar software</a>
+                                  developed by the
+                                  <a href="http://vh.cmp.uea.ac.uk/index.php/Virtual_Humans_Group" target="_blank">Virtual Humans Group </a>
+                                  at the
+                                  <a href="https://www.uea.ac.uk/" target="_blank">University of East Anglia</a>.
+                              </p>
 
-          <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-
-            <div class="col-xl-6 col-lg-6">
-                <div class="featured-text text-center text-lg-left mr-5">
-
-                    <h4>Partners</h4>
-
-                    <p class="text-black-50 mb-3">
-                        Our translation tool makes use of the
-                        <a href="http://vh.cmp.uea.ac.uk/index.php/JASigning" target="_blank">JASinging avatar software</a>
-                        developed by the
-                        <a href="http://vh.cmp.uea.ac.uk/index.php/Virtual_Humans_Group" target="_blank">Virtual Humans Group </a>
-                        at the
-                        <a href="https://www.uea.ac.uk/" target="_blank">University of East Anglia</a>.
-                    </p>
-
-                    <p class="text-black-50 mb-3">
-                         We are especially grateful to <b>John Glauert</b> for providing a distribution of the software for our project.
-                    </p>
-
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6"><img class="img-fluid mb-3 mb-lg-0" src="images/partners.jpg" alt="" /></div>
-        </div>
-
+                              <p class="text-black-50 mb-3">
+                                   We are especially grateful to <b>John Glauert</b> for providing a distribution of the software for our project.
+                              </p>
+                              <hr class="d-none d-lg-block mb-0 mr-0" />
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <!-- Approach Row-->
+          <div class="row justify-content-center no-gutters">
+              <div class="col-lg-3"><img class="img-fluid w-70" src="images/uni-geneve.png" alt="" /></div>
+              <div class="col-lg-6">
+                  <div class="bg-light text-center h-100 project">
+                      <div class="d-flex h-100">
+                          <div class="project-text w-100 my-auto text-center text-lg-left">
+                              <h4 class="text-black">University of Geneva</h4>
+                              <p class="mb-0 text-black-50">
+                              The 
+                              <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/" target="_blank">Department of Translation Technology</a>
+                              at the
+                              <a href="https://www.unige.ch/" target="_blank">University of Geneva</a>
+                              is developing a similar tool for Swiss-French Sign Language as part of the 
+                              <a href="https://babeldr.unige.ch/" target="_blank">BabelDr project</a>.
+                              </p>
+                              <hr class="d-none d-lg-block mb-0 ml-0" />
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
 </section>
 
 <!--================================================================-->
