--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ function addSuggestion(suggestion){
             <br>
             <!-- Defines the button and questioncircle displayed for the option "freestyle" -->
             <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
-            <label for="freestyle" style="margin-right:5px">Avatar translation computed on the fly</label>
+            <label for="freestyle" style="margin-right:5px">On-demand avatar translation</label>
             <i class="fa fa-question-circle" title="This functionality is experimental.
             Correctness of the result cannot be guaranteed."></i>
 
@@ -558,9 +558,8 @@ function addSuggestion(suggestion){
 <section class="projects-section intro-section bg-white" id="Partners">
 
       <div class="container" height="100%">
-          <!-- East Anglia Row-->
           <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-              <div class="col-lg-6"><img class="img-fluid h-100" src="images/east-anglia.jpg" alt="" /></div>
+              <!-- East Anglia-->
               <div class="col-lg-6">
                   <div class="bg-light text-center h-100 project">
                       <div class="d-flex h-100">
@@ -576,29 +575,31 @@ function addSuggestion(suggestion){
                               </p>
 
                               <p class="text-black-50 mb-3">
-                                   We are especially grateful to <b>John Glauert</b> for providing a distribution of the software for our project.
+                                   We are especially grateful to 
+                                   <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> for providing a distribution of the software for our project.
                               </p>
                               <hr class="d-none d-lg-block mb-0 mr-0" />
                           </div>
                       </div>
                   </div>
               </div>
-          </div>
-          <!-- Approach Row-->
-          <div class="row justify-content-center no-gutters">
-              <div class="col-lg-3"><img class="img-fluid w-70" src="images/uni-geneve.png" alt="" /></div>
+              <!-- Geneva -->
               <div class="col-lg-6">
                   <div class="bg-light text-center h-100 project">
                       <div class="d-flex h-100">
                           <div class="project-text w-100 my-auto text-center text-lg-left">
                               <h4 class="text-black">University of Geneva</h4>
-                              <p class="mb-0 text-black-50">
-                              The 
-                              <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/" target="_blank">Department of Translation Technology</a>
-                              at the
-                              <a href="https://www.unige.ch/" target="_blank">University of Geneva</a>
-                              is developing a similar tool for Swiss-French Sign Language as part of the 
-                              <a href="https://babeldr.unige.ch/" target="_blank">BabelDr project</a>.
+                              <p class="mb-3 text-black-50">
+                                  The 
+                                  <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/" target="_blank">Department of Translation Technology</a>
+                                  at the
+                                  <a href="https://www.unige.ch/" target="_blank">University of Geneva</a>
+                                  is developing a similar translation tool for Swiss-French Sign Language as part of the 
+                                  <a href="https://babeldr.unige.ch/" target="_blank">BabelDr project</a>.
+                              </p>
+                              <p class="mb-3 text-black-50">
+                                  <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>
+                                  of the Geneva group is helping us with encoding NGT signs in SiGML.
                               </p>
                               <hr class="d-none d-lg-block mb-0 ml-0" />
                           </div>
