--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ function addSuggestion(suggestion){
         <!--================================================================-->
 
         <span id="videos" class="undisplayed" align="left">
-          <iframe src="https://www.dropbox.com/s/bhm5glj5ih29med/AlledaagsDingen_03_Kanikuhelpen.mp4?raw=1"></iframe>
+          <iframe width="500" height="500" src="https://www.dropbox.com/s/bhm5glj5ih29med/AlledaagsDingen_03_Kanikuhelpen.mp4?raw=1"></iframe>
           <!-- <iframe width="320" height="240" src="https://www.dropbox.com/s/bhm5glj5ih29med/AlledaagsDingen_03_Kanikuhelpen.mp4?raw=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe> -->
         </span>
 
