--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 <!-- CSS for tooltip -->
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
-<!-- CSS for question circle -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
 <!-- imports necessary jquery-->
 <script type="text/javascript" src="../static/jquery-3.5.1.min.js"></script>
 
 <!-- imports jquery UI necessary for autocomplete and tooltip -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
+<!-- CSS for question circle -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 
 <script language="javascript">
@@ -185,7 +185,6 @@ function toSiGML(text){
     }
   }
 }
-
 
 
 
@@ -358,7 +357,7 @@ function addSuggestion(suggestion){
                             <h4 class="text-white">Challenge</h4>
                             <p class="mb-2 text-white-50">
                             In times of COVID-19, it is very difficult for healthcare professionals to communicate with deaf patients. 
-                            Sign language interpreters are often not allowed to enter the hospital and mouth caps make lipreading impossible.
+                            Sign language interpreters are often not allowed to enter the hospital and face masks make lipreading impossible.
                             </p>
                             <hr class="d-none d-lg-block mb-0 mr-0" />
                         </div>
@@ -408,8 +407,6 @@ function addSuggestion(suggestion){
             <label for="option" style="margin-right:-100px; margin-bottom:15px">
                 <h4>Choose a translation option:</h4>
             </label>
-
-
 
             <br>
             <!-- Defines the button and questioncircle displayed for the option "video" -->
