--- a/index.html
+++ b/index.html
@@ -16,35 +16,34 @@
 <!-- Icon -->
 <link rel="icon" type="image/x-icon" href="images/hand-icon.png" />
 
+<!-- =============================================== -->
+<!-- Fonts -->
+
 <!-- Fonts for grayscale theme -->
 <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
 
-<!-- CSS file for bootstrap grayscale theme -->
-<link href="static/grayscalestyles.css" rel="stylesheet" />
+<!-- =============================================== -->
+<!-- CSS files -->
 
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<!-- MDB Bootstrap -->
+<link rel="stylesheet" href="css/mdb.min.css">
+<!-- CSS for question circle -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<!-- CSS file for bootstrap grayscale theme -->
+<link rel="stylesheet" href="css/grayscalestyles.css">
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
-<!-- <link rel="stylesheet" href="static/cwasa.css"> -->
-<link rel="stylesheet" href="static/cwasa-reduced.css">
+<link rel="stylesheet" href="css/cwasa-reduced.css">
+<!-- CSS for Jquery autocomplete and tooltips -->
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></link>
+
 
 <!-- script for generating avatar animations -->
 <script type="text/javascript" src="cwa/allcsa.js"> </script>
 
-<!-- CSS for autocomplete -->
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></link>
-
-<!-- CSS for tooltip -->
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
-<!-- imports necessary jquery-->
-<script type="text/javascript" src="../static/jquery-3.5.1.min.js"></script>
-
-<!-- imports jquery UI necessary for autocomplete and tooltip -->
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-
-<!-- CSS for question circle -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 
 <script language="javascript">
@@ -102,6 +101,16 @@ $( function() {
 
   // Defines all the options for autocomplete suggestions
   var options = ["Goedemorgen","Goedemiddag","Goedenavond","Tot ziens","Tot morgen","Heeft U goed geslapen?","Welterusten","Eet smakelijk","Ik kom op een later moment terug.","Ik moet even weg.","Sorry, ik heb geen tijd.","Ik ga u een nieuw infuus geven.","De arts gaat u een nieuw infuus geven.","De verpleegkundige gaat u een nieuw infuus geven.","Een laborant komt bloedprikken (Voor Avatar: een laborant komt in de ochtend/ middag bloedprikken).","Een co- assistent (student in opleiding tot arts) komt bloedprikken.","Een collega komt bloedprikken.","Sorry, het lukt mij niet het infuus te prikken. Ik ga een collega vragen.","De MRI is goed.","De bloeduitslagen zijn goed.","De bloeduitslagen zijn niet helemaal goed.","De uitslag van de CT scan is goed.","De uitslag van de CT scan is niet helemaal goed.","De röntgenfoto is verbeterd.","De röntgenfoto is verslechterd.","De röntgenfoto is hetzelfde gebleven.","Heeft u pijn?","Op een schaal van 0-10, waarbij 0 ‘geen pijn’ is en 10 de meeste pijn die u zich kunt voor stellen, hoeveel pijn heeft u?","Waar heeft U pijn?","Wat voor soort pijn heeft U? Drukkend, stekend, krampend of anders omschrijven?","Ik kom het infuus controleren (of het nog goed loopt).","U moet in bed blijven.","Als U op de Intensive care ligt bellen de artsen of verpleegkundigen elke dag met uw contactpersoon om te vertellen hoe het gaat.","Ik ga nu het zuurstof kapje over uw neus en mond doen.","Er gebeuren vandaag geen onderzoeken of gesprekken meer.","De COVID-19 test is negatief, dit betekent dat u waarschijnlijk geen Corona heeft.","Soms heeft de test het fout dus we gaan nog meer onderzoek doen.","De COVID-19 test is positief, dit betekent dat u wel Corona heeft.","We gaan in het bloed testen of U antistoffen tegen Corona heeft. Als U antistoffen heeft betekent dit dat U nu Corona heeft of dat U Corona heeft gehad in het verleden.","De Coronatest in het bloed is negatief: u heeft geen antistoffen tegen Corona.","De Coronatest in het bloed is positief: u heeft wel antistoffen tegen Corona.","Met dit recept kunt U medicijnen ophalen bij apotheek.","Met dit recept kan iemand anders medicijnen voor U ophalen bij de apotheek.","Bent U ergens allergisch voor?","Waar bent u allergisch voor?","Gebruikt u medicijnen?","Welke medicijnen gebruikt u?","Kan iemand (thuis) een foto maken van de medicijnen die u gebruikt?"," Rookt u?","Bent U weleens eerder (voor u zelf) in het ziekenhuis geweest?","Welk ziekenhuis was U toen en waarom?","Wanneer was dat?","Zijn er mensen in Uw omgeving ziek?","Welke apotheek komt u?","Wie is uw huisarts?","Wat is uw geboortedatum?","Heeft u speciale dieetwensen? Zoals vegetarisch, veganistisch of bepaalde producten niet?","Heeft U gehoorapparaten of een CI?","Hoe wilt U het liefst communiceren als er geen tolk is? Met liplezen? Zinnen opschrijven? Via deze computer? Of iets anders?","Wilt u toegang tot uw elektronisch dossier? Daarmee kunt u thuis via de computer uitslagen van onderzoeken in zien.","Ik moet naar de wc.","Moet u naar de wc?","Kan ik U helpen?","Ik ga u wassen.","Ik ga u helpen met douchen.","U moet in de douche op de stoel zitten","Wilt u videobellen?","Zal ik u helpen zodat u kunt videobellen?","Dit is de alarmknop, als u hierop drukt dan komt er iemand naar u toe.","Wilt u een tv met teletekst zodat u de ondertiteling kunt aanzetten?","Wat wilt u eten?","Wat wilt u eten, kunt u het aanwijzen op de kaart?","Wat wilt u drinken?","Wat wilt u drinken, kunt u het aanwijzen op de kaart?","Heeft u het warm?","Heeft u het koud?","Het bed gaat nu omhoog.","Het bed gaat nu omlaag.","Wie komt U ophalen?","Ik help U.","Wij helpen U.","Heeft U in de afgelopen 24 uur een van deze klachten gehad: Hoesten, verkoudsheidsklachten, verhoging of koorts, benauwdheid, reuk en/ of smaak verlies?","Heeft U op dit moment een huisgenoot met koorts en/ of benauwdheidsklachten?","Heeft U de afgelopen 7 dagen een Corontest gehad? Zo ja, was deze positief?","Heeft U een huisgenoot/ gezinslid met klachten van het Coronavirus?","Bent U in quarantaine omdat U direct contact heeft gehad met iemand waarbij het nieuwe Coronavirus is vastgesteld? Of heeft U de afgelopen 14 dagen contact gehad met iemand die het Coronavirus heeft?"];
+
+  // // MD Bootstrap autocomplete
+  // $('#mySiGML').mdbAutocomplete({
+  //   data: options,
+  //   dataColor: 'green',
+  //   inputFocus: '2px solid green',
+  //   inputBlur: '1px solid #ced4da',
+  //   inputFocusShadow: '0 1px 0 0 #4285f4',
+  //   inputBlurShadow: ''
+  //   });
 
   // Defines the filter that searches the list of options for matches
   function customFilter(array, terms) {
@@ -312,7 +321,7 @@ function addSuggestion(suggestion){
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">COVID-19 Sign Language Translation</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">COVID-19 SignTranslate</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
@@ -325,6 +334,7 @@ function addSuggestion(suggestion){
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Funding">Funding</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Partners">Partners</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="index-nl.html">NL</a></li>
             </ul>
         </div>
     </div>
@@ -427,11 +437,19 @@ function addSuggestion(suggestion){
 
               <br>
               <br>
-              <h4>Enter Sentence:</h4>
+              <!-- <h4>Enter Sentence:</h4> -->
 
               <span class="ui-widget" id="autocomp">
-                <input id="mySiGML" class="input" style="margin-top:10px; margin-bottom:20px;width: 500px;"> 
+                <!-- <label for="mySiGML"></label> -->
+                <!-- <input id="mySiGML" class="input" style="margin-top:10px; margin-bottom:20px;width: 500px;">  -->
+                  <div class="md-form">
+                      <input type="search" id="mySiGML" class="form-control">
+                      <label for="mySiGML" class="active">Enter a sentence or keywords here</label>
+                  </div>
+
               </span>
+
+
 
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
@@ -606,7 +624,6 @@ function addSuggestion(suggestion){
           </div>
           <div class="row">
                 <div class="col-xl-12"><img class="img-fluid" src="images/landscape.jpeg" alt="" /></div>
-            
           </div>
 </section>
 
@@ -628,13 +645,21 @@ function addSuggestion(suggestion){
 
 <!-- Footer-->
 <footer class="footer bg-black small text-center text-white-50"><div class="container">Footer text</div></footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-<!-- Third party plugin JS-->
+
+<!-- jQuery -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<!-- Jquery UI necessary for autocomplete and tooltips -->
+<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="js/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="js/mdb.min.js"></script>
+<!-- Javascript for smooth scrolling-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<!-- Core theme JS-->
-<script src="static/grayscalescript.js"></script>
+<!-- Grayscale theme JS-->
+<script src="js/grayscalescript.js"></script>
 
 </body>
 </html>
