--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ $( function() {
        return matcher.test(value.label || value.value || value);
       });
     });
+    alert(array);
     return array;
   }
 
