tooltip and button naming conflict jquery ui and bootstrap resolved

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 <script>
 // let scrapeJSON = 'http://bluegalaxy.info/cgi/scrapeJSON.py'
 
+//Solves naming conflicts between jquery ui and bootstrap
+$.widget.bridge('uitooltip', $.ui.tooltip);
+$.widget.bridge('uibutton', $.ui.button);
+
 // Defines the functions and variable necessary for autcomplete suggestions
 $( function() {
 
