--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
 <link rel="stylesheet" href="css/cwasa-reduced.css">
 <!-- CSS for Jquery autocomplete and tooltips -->
-<!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></link> -->
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></link>
 <!-- CSS for autocomplete form -->
 <link rel="stylesheet" href="css/autocomp.css"></link>
 
@@ -46,6 +46,9 @@
 
 <!-- jQuery -->
 <script type="text/javascript" src="js/jquery.min.js"></script>
+
+<!-- jquery ui -->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <!-- Autocomplete JS-->
 <script type="text/javascript" src="js/autocomp.js"></script>
