jquery ui autocomplete

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ $( function() {
   //   inputBlurShadow: ''
   //   });
   //initiate the autocomplete function on the "mySiGML" element, and pass along the "options" array as possible autocomplete values:
-  autocomplete(document.getElementById("mySiGML"), options);
+  // autocomplete(document.getElementById("mySiGML"), options);
 
   // Defines the filter that searches the list of options for matches
   function customFilter(array, terms) {
