--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@ function undisplayInfo(id){
   document.getElementById(id).setAttribute("class", "undisplayed");
 }
 
-// Displays titles of all HTML elements as a tooltip
-$( function() {
-    $(document).tooltip({
-      position: { my: "left+15 center", at: "right center"},
-    });
-});
+// // Displays titles of all HTML elements as a tooltip
+// $( function() {
+//     $(document).tooltip({
+//       position: { my: "left+15 center", at: "right center"},
+//     });
+// });
 
 function addSuggestion(suggestion){
   // Requiring fs module in which
@@ -444,7 +444,7 @@ function addSuggestion(suggestion){
             <!-- Defines the button and questioncircle displayed for the option "freestyle" -->
             <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
             <label for="freestyle" style="margin-right:5px">On-demand avatar translation</label>
-            <i class="fa fa-question-circle" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i>
+            <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="right" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i>
 
               <br>
               <br>
