--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@ function undisplayInfo(id){
 //     });
 // });
 
+//Enables all tooltips in the document
+$(document).ready(function(){
+  $('[data-toggle="tooltip"]').tooltip();
+});
+
 function addSuggestion(suggestion){
   // Requiring fs module in which
   // writeFile function is defined.
@@ -444,7 +449,7 @@ function addSuggestion(suggestion){
             <!-- Defines the button and questioncircle displayed for the option "freestyle" -->
             <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
             <label for="freestyle" style="margin-right:5px">On-demand avatar translation</label>
-            <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="right" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i>
+            <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i>
 
               <br>
               <br>
@@ -460,7 +465,7 @@ function addSuggestion(suggestion){
               </span> -->
 
               <!-- Custom made autocomplete form -->
-              <form autocomplete="off" action="/action_page.php">
+              <form autocomplete="off">
                 <div class="autocomplete" style="width:500px;">
                   <input id="mySiGML" type="text" name="mySiGML" style="width: 100%;" placeholder="Enter a sentence or keywords here">
                 </div>
