--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ $.widget.bridge('uibutton', $.ui.button);
 
 
 <!-- Bootstrap tooltips -->
-<script type="text/javascript" src="js/popper.min.js"></script>
+<!-- <script type="text/javascript" src="js/popper.min.js"></script> -->
 <!-- Bootstrap core JavaScript -->
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <!-- Javascript for smooth scrolling-->
