--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <!-- jquery ui -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-<script language="javascript">
+<script>
 //Solves naming conflicts between jquery ui and bootstrap
 $.widget.bridge('uitooltip', $.ui.tooltip);
 $.widget.bridge('uibutton', $.ui.button);
@@ -66,7 +66,7 @@ $.widget.bridge('uibutton', $.ui.button);
 
 
 <!-- Bootstrap tooltips -->
-<!-- <script type="text/javascript" src="js/popper.min.js"></script> -->
+<script type="text/javascript" src="js/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <!-- Javascript for smooth scrolling-->
