--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- CSS for Jquery autocomplete and tooltips -->
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></link>
 <!-- CSS for autocomplete form -->
-<link rel="stylesheet" href="css/autocomp.css"></link>
+<!-- <link rel="stylesheet" href="css/autocomp.css"></link> -->
 
 
 <!-- =============================================== -->
