bootstrap tooltip and no jquery ui tooltip

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 <!-- jquery ui -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-<!-- <script>
+<script>
   //Solves naming conflicts between jquery ui and bootstrap
   $.widget.bridge('uitooltip', $.ui.tooltip);
   $.widget.bridge('uibutton', $.ui.button);
 </script>
- -->
+
 
 <!-- Autocomplete JS-->
 <!-- <script type="text/javascript" src="js/autocomp.js"></script> -->
