bootstrap tooltip and no jquery ui tooltip

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 <script>
 
   //Solves naming conflicts between jquery ui and bootstrap
-  $.widget.bridge('uitooltip', $.ui.tooltip);
-  $.widget.bridge('uibutton', $.ui.button);
+  // $.widget.bridge('uitooltip', $.ui.tooltip);
+  // $.widget.bridge('uibutton', $.ui.button);
 
 // let scrapeJSON = 'http://bluegalaxy.info/cgi/scrapeJSON.py'
 
