bootstrap tooltip and no jquery ui tooltip

--- a/index.html
+++ b/index.html
@@ -45,7 +45,20 @@
 <!-- =============================================== -->
 <!-- Javascripts (more scripts are loaded at the very end, somehow the placement matters) -->
 
+<!-- jQuery -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
 
+<!-- jquery ui -->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="js/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+<!-- Javascript for smooth scrolling-->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<!-- Grayscale theme JS-->
+<script type="text/javascript" src="js/grayscalescript.js"></script>
 
 
 <!-- Autocomplete JS-->
@@ -108,8 +121,8 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 <script>
 
   //Solves naming conflicts between jquery ui and bootstrap
-  // $.widget.bridge('uitooltip', $.ui.tooltip);
-  // $.widget.bridge('uibutton', $.ui.button);
+  $.widget.bridge('uitooltip', $.ui.tooltip);
+  $.widget.bridge('uibutton', $.ui.button);
 
 // let scrapeJSON = 'http://bluegalaxy.info/cgi/scrapeJSON.py'
 
@@ -652,21 +665,7 @@ function addSuggestion(suggestion){
 <!-- Javascripts -->
 
 <!-- Jquery JS is loaded in the beginning, see above -->
-<!-- jQuery -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
 
-<!-- jquery ui -->
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="js/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-<!-- Javascript for smooth scrolling-->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<!-- Grayscale theme JS-->
-<script type="text/javascript" src="js/grayscalescript.js"></script>
 
 
 </body>
