bootstrap tooltip and no jquery ui tooltip

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 
 <!-- jquery ui -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<script type="text/javascript">
+//Solves naming conflicts between jquery ui and bootstrap
+  $.widget.bridge('uitooltip', $.ui.tooltip);
+  $.widget.bridge('uibutton', $.ui.button);
+</script>
 <!-- Bootstrap tooltips -->
 <script type="text/javascript" src="js/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
@@ -120,9 +126,6 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 
 <script>
 
-  //Solves naming conflicts between jquery ui and bootstrap
-  $.widget.bridge('uitooltip', $.ui.tooltip);
-  $.widget.bridge('uibutton', $.ui.button);
 
 // let scrapeJSON = 'http://bluegalaxy.info/cgi/scrapeJSON.py'
 
